codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__rate_limits_and_plan__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests/rate_limits_and_plan.rs
assertion_line: 364
expression: popup
---
  Implement this plan?

  1. Yes, implement this plan  Switch to Default and start coding.
› 2. No, stay in Plan mode     Continue planning with the model.

  Press enter to confirm or esc to go back
