codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__rate_limits_and_plan__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests/rate_limits_and_plan.rs
assertion_line: 345
expression: popup
---
  Approaching rate limits
  Switch to gpt-5.1-codex-mini for lower credit usage?

› 1. Switch to gpt-5.1-codex-mini           Optimized for codex. Cheaper,
                                            faster, but less capable.
  2. Keep current model
  3. Keep current model (never show again)  Hide future rate limit reminders
                                            about switching models.

  Press enter to confirm or esc to go back
